--- a/config/database.yml
+++ b/config/database.yml
@@ -9,7 +9,7 @@ development:
   pool: 5
   # these are our new parameters
   encoding: unicode
-  database: social_d
+  database: sc_d
   host: localhost
   username: sblazhko
   password: 2525
@@ -22,7 +22,7 @@ test:
   pool: 5
   # these are our new parameters
   encoding: unicode
-  database: social_t
+  database: sc_t
   host: localhost
   username: sblazhko
   password: 2525
